Bugfix: Adjust spacing around timer

--- a/gymlog/static/css/exercise.css
+++ b/gymlog/static/css/exercise.css
@@ -302,7 +302,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   border-radius: var(--big-radius);
-  margin: 1rem;
+  margin: 0 1rem 1rem;
   background-color: var(--bg-s);
 }
 #todays-sets .timer.running {
